BB-2946: Move and refactor CSS from FrontendBundle to appropriate bundles  - fixed topbar: currency symbol jumped to the next line

--- a/src/OroB2B/Bundle/MenuBundle/Resources/public/default/scss/components/top_nav.scss
+++ b/src/OroB2B/Bundle/MenuBundle/Resources/public/default/scss/components/top_nav.scss
@@ -8,6 +8,8 @@
   }
 
   &__navigation {
+    display: inline-block;
+
     ul {
       @include list-normalize();
 
@@ -38,6 +40,10 @@
       &:hover {
         text-decoration: underline;
       }
+    }
+
+    &--has-sibling {
+      margin-right: 10px;
     }
   }
 
